@@ -52,6 +52,8 @@ JEDIT 4.0 VERSION HISTORY
 - Added a workaround for bug on Windows where a few Alt-key sequences
   (Alt-Left, Alt-Right, Alt-Up, Alt-Down, Alt-PageUp, Alt-PageDown)
   inserted garbage in the text area
+- Firewall code would throw a NullPointerException on startup if the
+  user name was non-null, but the password was empty
 
 + API Changes
 
